[REFACT] CouponService 메서드 추출 및 정리